--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,6 +20,7 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v7
         env:
           SONAR_TOKEN: ${{ secrets.RUST_SYS_PEEK_TOKEN }}
+        with:
           projectBaseDir: sys-peek/
 
   scan-guessing_game:
@@ -33,6 +34,7 @@ jobs:
         uses: SonarSource/sonarqube-scan-action@v7
         env:
           SONAR_TOKEN: ${{ secrets.RUST_GUESSING_GAME_TOKEN }}
+        with:  
           projectBaseDir: guessing_game/
 
   # --- Phase 2: Cross-Platform Build ---
