--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,7 +58,7 @@ jobs:
           components: rustfmt, clippy
 
       - name: Build Binary
-        run: cargo build --release
+        run: CARGO_TARGET_DIR=sys-peek cargo build --release
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
@@ -87,10 +87,8 @@ jobs:
           components: rustfmt, clippy
 
       - name: Build Binary
-        run: cargo build --release
-        with:
-          projectBaseDir: guessing_game/
-
+        run: CARGO_TARGET_DIR=guessing_game cargo build --release
+        
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
