--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: sys-peek-${{ matrix.os }}
-          path: rust/sys-peek/target/release/sys-peek
+          path: rust/sys-peek
 
   build-guessing_game:
     name: Build on ${{ matrix.os }}
@@ -92,5 +92,5 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: guessing_game-${{ matrix.os }}
-          path: rust/guessing_game/target/release/guessing-game
+          path: rust/guessing_game
 
