--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,62 +9,61 @@ on:
 
 jobs:
   # --- Phase 1: Static Analysis ---
-  scan-sys-peek:
-    name: scan-sys-peek
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarQube Scan of sys-peek
-        uses: SonarSource/sonarqube-scan-action@v7
-        env:
-          SONAR_TOKEN: ${{ secrets.RUST_SYS_PEEK_TOKEN }}
-        with:
-          projectBaseDir: sys-peek/
+#  scan-sys-peek:
+#    name: scan-sys-peek
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+#      - name: SonarQube Scan of sys-peek
+#        uses: SonarSource/sonarqube-scan-action@v7
+#        env:
+#          SONAR_TOKEN: ${{ secrets.RUST_SYS_PEEK_TOKEN }}
+#        with:
+#          projectBaseDir: sys-peek/
 
-  scan-guessing_game:
-    name: scan-guessing_game
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-      - name: SonarQube Scan of guessing_game
-        uses: SonarSource/sonarqube-scan-action@v7
-        env:
-          SONAR_TOKEN: ${{ secrets.RUST_GUESSING_GAME_TOKEN }}
-        with:  
-          projectBaseDir: guessing_game/
+#  scan-guessing_game:
+#    name: scan-guessing_game
+#    runs-on: ubuntu-latest
+#    steps:
+#      - uses: actions/checkout@v4
+#        with:
+#          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+#      - name: SonarQube Scan of guessing_game
+#        uses: SonarSource/sonarqube-scan-action@v7
+#        env:
+#          SONAR_TOKEN: ${{ secrets.RUST_GUESSING_GAME_TOKEN }}
+#        with:  
+#          projectBaseDir: guessing_game/
 
   # --- Phase 2: Cross-Platform Build ---
-  build-sys-peek:
-    name: Build on ${{ matrix.os }}
-    # This is the key line: it waits for the sonarqube job to finish successfully
-    needs: scan-sys-peek 
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
+#  build-sys-peek:
+#    name: Build on ${{ matrix.os }}
+#    needs: scan-sys-peek 
+#    runs-on: ${{ matrix.os }}
+#    strategy:
+#      matrix:
 #        os: [ubuntu-latest, macos-latest]
-        os: [ubuntu-latest]
+#        os: [ubuntu-latest]
 
-    steps:
-      - uses: actions/checkout@v4
+#    steps:
+#      - uses: actions/checkout@v4
         
-      - name: Set up Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: stable
-          components: rustfmt, clippy
+#      - name: Set up Rust
+#        uses: dtolnay/rust-toolchain@stable
+#        with:
+#          toolchain: stable
+#          components: rustfmt, clippy
 
-      - name: Build Binary
-        run: cd sys-peek && cargo build --release
+#      - name: Build Binary
+#        run: cd sys-peek && cargo build --release
 
-      - name: Upload Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: sys-peek-${{ matrix.os }}
-          path: rust/sys-peek
+#      - name: Upload Artifacts
+#        uses: actions/upload-artifact@v4
+#        with:
+#          name: sys-peek-${{ matrix.os }}
+#          path: rust/sys-peek
 
   build-guessing_game:
     name: Build on ${{ matrix.os }}
@@ -87,6 +86,8 @@ jobs:
 
       - name: Build Binary
         run: cd guessing_game && cargo build --release
+        run: find . -name guessing_game
+        run: ls -R
         
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
