--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,9 +85,10 @@ jobs:
           components: rustfmt, clippy
 
       - name: Build Binary
-        run: cd guessing_game && cargo build --release
-        run: find . -name guessing_game
-        run: ls -R
+        run: |
+          cd guessing_game && cargo build --release
+          find . -name guessing_game
+          ls -R
         
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
